# RnEHGFbDNlguJZBv

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: PotentialTalents_1.ipynb
potential_talents_nlp/: __init__.py  app.py  config.py  dataset.py  features.py  plots.py
potential_talents_nlp/modeling/: predict.py  train.py
