[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "potential_talents_nlp"
version = "0.0.1"
description = "An NLP project implemented in Python for a HR solutions platform"
authors = [
  { name = "Cameron Cochrane" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["potential_talents_nlp"]
include = ["pyproject.toml", "potential_talents_nlp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["potential_talents_nlp"]
force-sort-within-sections = true

